<resources>
    <string name="app_name">List Films</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="films_favourites">Filmes Favoritos</string>
    <string name="list_films">Lista de filmes</string>
    <string name="logout">Sair</string>
    <string name="signIn">Entrar</string>
    <string name="recovery">Esqueci a senha</string>
    <string name="signUp">Cadastrar-me</string>
    <string name="reset">Reiniciar</string>
    <string name="exit">Sair</string>
    <string name="send">Enviar</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="insert_email">Digite seu e-mail</string>
    <string name="register">Register</string>
    <string name="add_favourite">Adicionar aos favoritos</string>
    <string name="remove_favourite">Remover de Favoritos</string>
    <string name="invalid_parameters">Invalid Parameters</string>
</resources>
